<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.apollo29.ahoy.view.profile.ProfileViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/homeColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/events_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/main_profile_title"
                style="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/main_profile_description"
                style="?attr/textAppearanceBody2" />

            <LinearLayout
                android:id="@+id/profile_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_firstname">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.firstname}"
                        app:validateEmpty="@{true}"
                        app:validateEmptyMessage="@{@string/error_required}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_lastname">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.lastname}"
                        app:validateEmpty="@{true}"
                        app:validateEmptyMessage="@{@string/error_required}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_address">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.address}"
                        app:validateEmpty="@{true}"
                        app:validateEmptyMessage="@{@string/error_required}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_birthday">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthday_input"
                        android:inputType="date"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.birthday}"
                        app:validateEmpty="@{true}"
                        app:validateEmptyMessage="@{@string/error_required}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_mobile">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.mobile}"
                        app:validateEmpty="@{true}"
                        app:validateEmptyMessage="@{@string/error_phone}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/onboarding_profile_form_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.email}"
                        app:validateType='@{"email"}'
                        app:validateTypeMessage="@{@string/error_email}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_reset"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_reset"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_update"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_update"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>