<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_title_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:orientation="horizontal"
        android:background="@color/homeColor"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ahoy_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/main_about_title"
            app:fontFamily="@font/agneya"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?attr/textAppearanceHeadline4"/>

        <TextView
            android:id="@+id/version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_about_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?attr/textAppearanceSubtitle1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/about_info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/about_title_content">

        <TextView
            android:id="@+id/about_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/main_about_published"
            style="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/about_published_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/main_about_pubished_apollo29"
            style="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/about_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/main_about_resources"
            style="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/about_resources_content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/main_about_resources"
            style="?attr/textAppearanceBody1" />
        <TextView
            android:id="@+id/about_resources_content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/main_about_resources"
            style="?attr/textAppearanceBody1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>