<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ahoy_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_ahoy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ahoy_title"/>

    <TextView
        android:id="@+id/ahoy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/onboarding_welcome_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?attr/textAppearanceHeadline1" />

    <TextView
        android:id="@+id/ahoy_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/onboarding_welcome_subtitle"
        app:layout_constraintTop_toBottomOf="@id/ahoy_title"
        style="?attr/textAppearanceBody1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboarding_start"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_start"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>